--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Contact Form!</h1>
 
-    <form name="contact">
+    <form name="contact" method="POST" data-netlify="true">
       <input type="text" name="Full name" placeholder="Full name" />
       <input type="email" name="email" placeholder="email address" />
 
